# silver

./: .gitignore  .gitmodules  CheckerHandler.py  ClassicalChecker.py  ClassicalMemory.py  Command.py  ComplexVector.py  Instruction.py  InterpretationTranslator.py  JSONInterpreter.py  MeasureOptions.py  ObligationGenerator.py  Process.py  Prog.py  Program.py  QCTester.ipynb  QuantumChecker.py  QuantumMemory.py  QuantumOps.py  QuantumReferencer.py  README.md  SilSpeq.lark  SilSpeq.py  SilSpeqInterpreter.py  SilSpeqParser.py  SilSpeqTransformer.py  SilSpeqZ3FlagInterpreter.py  SilSpeqZ3FlagVisitor.py  SilSpeqZ3Interpreter.py  SilVer.py  Silq.ipynb  SilqInterpreter.py  SilqSpeqParser.py  SpeqGenerator.py  VarRef.py  Z3_notes.md  benchmark.py  complex.py  ex.spq  ex2.spq  (+16 more)
Silq_Programs/: Error_Test.slq  QFT_fixed.slq  bv_fixed2.slq  bv_fixed2.spq  bv_fixed3.slq  bv_fixed3.spq  bv_fixed4.spq  bv_fixed5.slq  bv_fixed5.spq  bv_fixed6.spq  bv_fixed7.slq  bv_fixed7.spq  bv_fixed8.slq  bv_fixed8.spq  deutsch.slq  deutsch.spq  deutsch_anc.slq  deutsch_anc.spq  deutsch_anc_fail.slq  deutsch_jozsa.slq  deutsch_program1.slq  deutsch_program2.slq  dj_fixed.slq  dj_fixed2.spq  dj_fixed3.spq  dj_fixed4.slq  dj_fixed4.spq  dj_fixed5.spq  dj_fixed6.spq  dj_fixed7.slq  dj_fixed8.spq  dj_oracles.slq  grover_err3.slq  grover_err3.spq  grover_fixed.slq  grover_fixed2.slq  grover_fixed2.spq  grover_fixed2alt.spq  grover_fixed3.spq  grover_fixed4.spq  (+18 more)
examples/: dj_3.spq  ex2.spq  ex3.spq  symbols.spq
silver/: ComplexVector.py  Instruction.py  JSONInterpreter.py  MeasureOptions.py  Process.py  (+6 more)
(+267 files in other folders)
