[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "silver"
version = "0.0.1"
authors = [
  { name="Marco Lewis", email="m.j.lewis2@newcastle.ac.uk" },
]
description = "Verification of Silq programs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/marco-lewis/verif-silq"
"Bug Tracker" = "https://github.com/marco-lewis/verif-silq/issues"